# balatro-mod-manager

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  cliff.toml  devbox.json  eslint.config.js  oxlint.json  package-lock.json  package.json  vite.config.js  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
packaging/: Dockerfile
packaging/flatpak/: appstream-compose  io.balatro.ModManager.desktop  io.balatro.ModManager.json  io.balatro.ModManager.metainfo.xml
scripts/: aur-update.sh  install.ps1  linux-install.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bmm-lib/: Cargo.toml
src-tauri/bmm-lib/src/: backup.rs  balamod.rs  cache.rs  database.rs  discord_rpc.rs  errors.rs  finder.rs  http.rs  installer.rs  lib.rs  local_mod_detection.rs  logging.rs  lovely.rs  mod_collections.rs  rate_limiter.rs  smods_installer.rs
src-tauri/capabilities/: default.json
src-tauri/src/: analytics.rs  assets.rs  bmi.rs  compat_helper.rs  lfs.rs  lib.rs  main.rs  models.rs  state.rs  thumb_queue.rs  util.rs  wayland_session.rs
src-tauri/src/commands/: analytics.rs  backup.rs  cache.rs  detection.rs  external.rs  health.rs  import.rs  init.rs  install.rs  lovely.rs  mod.rs  mods.rs  paths.rs  repo.rs  report.rs  settings.rs  system.rs  thumbnails.rs
src/components/: BackupCard.svelte  BackupsPanel.svelte  BackupsPanel.test.ts  BalatroPicker.svelte  BulkActionBar.svelte  BulkActionBar.test.ts  CollectionImportPopup.svelte  CollectionPicker.svelte  CreateBackupModal.svelte  CustomDropdown.svelte  DeleteBackupPopup.svelte  DepPrompt.svelte  DiscordFab.svelte  DragDropOverlay.svelte  GithubIcon.svelte  LaunchAlertBox.svelte  LaunchButton.svelte  LovelyMissingPopup.svelte  MessageStack.svelte  PathSelector.svelte  RecoveryScreen.svelte  ReportIssue.svelte  RequiresPopup.svelte  RestoreBackupPopup.svelte  SecurityPopup.svelte  ShaderBackground.svelte  UninstallDialog.svelte  UpdateAvailablePopup.svelte  WarningPopup.svelte
src/components/common/: LazyImage.svelte
src/components/viewblock/: About.svelte  About.test.ts  LocalModCard.svelte  ModCard.svelte  ModView.svelte  Mods.svelte  SearchView.svelte  Settings.svelte  Settings.test.ts  SubmitMod.svelte  SubmitMod.test.ts
src/constants/: timing.ts
src/lib/: opener.ts  platform.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/main/: +page.svelte
src/stores/: backups.ts  collections.ts  descriptions.ts  modCache.ts  modStore.ts  network.ts  popupManager.ts  ui.test.ts  ui.ts  update.ts
src/utils/: cardPalette.test.ts  cardPalette.ts  concurrency.ts  errors.ts  fuzzy.ts  helpers.test.ts  image-cache.test.ts  image-cache.ts  image-loader-shared.ts  lru-cache.test.ts  lru-cache.ts  resize-observer-pool.ts  storage-quota.test.ts  storage-quota.ts  tauriInvoke.test.ts  tauriInvoke.ts
version_updater/: README.md
version_updater/src/: version_updater.f90
