[package]
name = "balatro-mod-manager"
version = "0.3.6"
description = "A mod manager for Balatro - easily install and manage mods for the popular roguelike deckbuilding game"
authors = ["skyline69<67526259+skyline69@users.noreply.github.com>"]
edition = "2024"
keywords = ["gaming", "mods", "balatro", "manager", "tauri"]
categories = ["games", "development-tools", "gui"]
readme = "README.md"
repository = "https://github.com/skyline69/balatro-mod-manager"
publish = false


[lib]
name = "balatro_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
bmm-lib = { workspace = true }
dirs = "6.0.0"
tauri-plugin-fs = "2"
log = "0.4.29"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-utils = "2.8.1"
base64 = "0.22.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
httpdate = "1.0.3"
# chrono = "0.4.40"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
open = "5.3.3"
tauri-plugin-prevent-default = "4.0.3"
tar = "0.4.44"
flate2 = { version = "1", default-features = false, features = [
	"rust_backend",
] }
unrar = "0.5"
walkdir = "2.5.0"
rayon = "1.11.0"
urlencoding = "2.1.3"
tokio = { version = "1.49.0", features = ["time", "sync", "fs", "io-util"] }
futures = "0.3.31"
sysinfo = "0.37.2"
tauri-plugin-os = "2"
libc = "0.2"
once_cell = "1.21.3"
tokio-stream = "0.1.17"

[dev-dependencies]
tempfile = "3.24.0"
scopeguard = "1.2.0"
mockito = "1.7.1"
tokio-test = "0.4.4"
test-case = "3.3.1"
assert_fs = "1.1.3"
predicates = "3.1.3"

# [target.'cfg(target_os = "macos")']
# rustflags = [
# 	"-C",
# 	"link-arg=-Wl,-platform_version,macos,11.0,15.2",
# 	"-C",
# 	"link-arg=-fatal_warnings",
# ]


[[bin]]
name = "BMM"
path = "src/main.rs"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2.4"

[target.'cfg(target_os = "linux")'.dependencies]
shell-words = "1"
