[package]
name = "bmm-lib"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0", features = ["serde"] }
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
dirs = "6.0.0"
discord-rich-presence = "1.1.0"
env_logger = "0.11.8"
flate2 = { version = "1", default-features = false, features = [
	"rust_backend",
] }
infer = "0.19.0"
lazy_static = "1.5.0"
libc = "0.2.180"
libflate = "2.2.1"
log = "0.4.29"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.13", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
tar = "0.4.44"
tauri = "2.9.5"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.24.0"
scopeguard = "1.2.0"
mockito = "1.7.1"
tokio = { version = "1.49.0", features = ["full", "test-util"] }
rstest = "0.26.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
sysinfo = "0.38"

[target.'cfg(unix)'.dependencies]
libproc = "0.14.11"
home = "0.5.12"
# libloading = "0.8.6"

[build-dependencies]
dirs = "6.0.0"
